# sysCompiler

./: .cproject  .gitignore  .project  CMakeLists.txt  LinkedList.h  NodeType.h  README.md  String.cpp  String.h  TType.h  Token.cpp  Token.h  TokenInformation.cpp  TokenInformation.h  makefile
Automat/: makefile
Automat/debug/: AutomatTest
Automat/src/: Automat.cpp  Automat.h  TestAutomat.cpp
Buffer/: 1020 zeichen.txt  1023 zeichen.txt  1023_lorem_ipsum.txt  1024 zeichen.txt  1025 zeichen.txt  1026_zeichen.txt  2047_lorem_ipsum.txt  4095_lorem_ipsum.txt  TestFile.txt  makefile  makefile.old
Buffer/debug/: BufferTest
Buffer/src/: Buffer.cpp  Buffer.h  BufferHalf.cpp  BufferHalf.h  TestBuffer.cpp
Parser/: makefile
Parser/debug/: ParserTest
Parser/src/: CodeGeneratorVisitor.cpp  CodeGeneratorVisitor.h  FileWriter.cpp  FileWriter.h  Node.cpp  Node.h  NodeType.h  ParseTree.cpp  ParseTree.h  ParseTreeObject.cpp  ParseTreeObject.h  ParseVariable.cpp  ParseVariable.h  Parser.cpp  Parser.h  PrintingVisitor.cpp  PrintingVisitor.h  ProgramNode.cpp  ProgramNode.h  Rule.h  TestParser.cpp  TypeCheckVisitor.cpp  TypeCheckVisitor.h  Visitor.cpp  Visitor.h
Parser/src/Node/: ArrayNode.cpp  ArrayNode.h  DeclNode.cpp  DeclNode.h  DeclsNode.cpp  DeclsNode.h  EpsilonNode.cpp  EpsilonNode.h  Exp2Node.cpp  Exp2Node.h  ExpNode.cpp  ExpNode.h  IndexNode.cpp  IndexNode.h  Leaf.cpp  Leaf.h  OpExpNode.cpp  OpExpNode.h  OpNode.cpp  OpNode.h  ProgramNode.cpp  ProgramNode.h  StatementNode.cpp  StatementNode.h  StatementsNode.cpp  StatementsNode.h
Parser/src/ParseVariables/: vProg.cpp  vProg.h
ParserTests/: test2.txt  test3.txt  test4.txt
Scanner/: makefile
Scanner/debug/: ScannerTest
Scanner/src/: DummyBuffer.cpp  DummyBuffer.h  Scanner.cpp  Scanner.h  TestScanner.cpp
ScannerTestsSS13/: scanner1.txt  scanner2.txt  scanner5.txt  scanner6.txt  scanner7.txt  scanner8.txt  scanner_Terminale.txt  testZeilen.txt
ScannerTestsWS14/: scanner2.txt
ScannerTestsWS1415/: scanner1.txt  scanner2.txt  scanner5.txt  scanner7.txt
Symboltable/: makefile
Symboltable/debug/: SymboltableTest
Symboltable/src/: HashMap.cpp  HashMap.h  ILinkedList.h  LinkedList.cpp  LinkedList.h  Symboltable.cpp  Symboltable.h  TestHashMap.cpp  TestSymboltable.cpp  TokenLinkedList.cpp  TokenLinkedList.h  TokenNode.cpp  TokenNode.h
Visual Paradigm Project/: sysProg.vpp  sysProg.vpp~4  sysProg.vpp~5
Visual Paradigm Project/.vpprefdata/: .systemproject.vpp  .systemproject.vpp~2  .systemproject.vpp~3  .vp.preference
Visual Paradigm Project/.vpprefdata/LayoutPerspectiveData/: i278sCCGAqAKbwcXC.lod
Visual Paradigm Project/.vpprefdata/nicknames/: LIFccaKGCxDwgANL  NickNameIndexing.xml
Visual Paradigm Project/.vpprefdata/projectsViewInfo/: pSx_oqKGCxDwaQAF
Visual Paradigm Project/.vpprefdata/treestates/: ProjectTreeStateIndexing.xml  vIFccaKGCxDwgANM
doku/: doku.tex  makefile
